[package]
authors = ["Daniel Brotsky <dev@brotsky.com>"]
description = "Windows native credential store for keyring"
homepage = "https://github.com/open-source-cooperative/keyring-rs/wiki/Keyring"
keywords = ["windows", "credential-manager", "credential-store", "keyring"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/open-source-cooperative/windows-native-keyring-store.git"
rust-version = "1.85"
exclude = [".github/"]
readme = "README.md"
name = "windows-native-keyring-store"
version = "0.5.1"
edition = "2024"

[dependencies]
keyring-core = { version = "0.7.2" }
byteorder = "1.5.0"
regex = "1.12.2"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security_Credentials"] }
zeroize = "1.8.2"

[dev-dependencies]
fastrand = "2.3.0"
sscanf = "0.4.4"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
